$Id$

2016-11-04  Christian Franke  <franke@computer.org>

	Add authentication to update-smart-drivedb (ticket #751):
	Create missing branches RELEASE_6_5_DRIVEDB and RELEASE_6_6_DRIVEDB.
	Add signature files drivedb.h.raw.asc to each maintained branch.

2016-10-23  Christian Franke  <franke@computer.org>

	smartd.8.in: Document Windows PARAMCHANGE service control command.

	smartctl.8.in, smartd.8.in, smartd.conf.5.in: Enable NVMe sections
	for NetBSD.

	configure.ac, os_netbsd.cpp: Add --with-nvme-devicescan for NetBSD.

	drivedb.h:
	- Toshiba 3.5" MG04ACA... Enterprise HDD (ticket #732)
	- Toshiba X300 (ticket #716)
	- Seagate Laptop HDD: Rename, add 3/4TB (ticket #738)
	- Seagate Constellation ES: HP OEM
	- Western Digital RE4: *ABYZ variant
	- Western Digital Re: Add attribute 16 (ticket #742)
	- Western Digital Black: Remove *BEK[TX] variants
	- Western Digital Black Mobile: 1TB, *BEKT, *LPLX variants
	- Western Digital Elements / My Passport (USB, AF): 4TB
	- USB: Neodio Technologies (0x0aec:0x3050)
	- USB: Dura Micro (0x0c0b:0xb136)
	- USB: My Passport Ultra 4TB (0x1058:0x2599)

2016-10-17  Christian Franke  <franke@computer.org>

	configure.ac: Add --with-scriptpath option.
	smartd_warning.sh.in, update-smart-drivedb.in: Set PATH variable.

2016-10-03  Christian Franke  <franke@computer.org>

	os_win32/vc14/*.vcxproj: Add platform x64.

	os_win32.cpp: Use new enhanced version of IOCTL_STORAGE_QUERY_PROPERTY
	to access NVMe info.  This works with Windows 10 NVMe driver
	(stornvme.sys) (ticket #691).
	smartctl.8.in, smartd.8.in: Document device names.

2016-09-28  Christian Franke  <franke@computer.org>

	drivedb.h:
	- USB: Buffalo MiniStation HD-PZU3 (0x0411:0x01f9) (ticket #739)
	- USB: Iomega Prestige (0x059b:0x0571)
	- USB: LaCie P9223 (0x059f:0x1070)
	- USB: Seagate Expansion Desktop (0x0bc2:0x331a) (ticket #725)
	- USB: Seagate Backup Plus (0x0bc2:0xab28) (ticket #738)
	- USB: WD My Passport Ultra (0x1058:0x259d) (ticket #736)